<resources>
    <string name="app_name">Music</string>
    <string name="beatblend">BeatBlend</string>
    <string name="text">Listen to your favorite music </string>
    <string name="get_started">Get Started</string>
    <string name="secondpage">Welcome to HomePage </string>
    <string name="artist">Artists</string>
    <string name="album">Album</string>
    <string name="folders">Folders</string>
    <string name="genres">Genres</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artistcount">5 artist</string>
    <string name="albumtext">5 albums</string>
    <string name="listtxt">artistnamelist</string>
</resources>