<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragments"
    android:background="#191919"
    tools:context=".HomePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toplogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,UselessParent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:src="@drawable/logo1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription,RtlHardcoded"
            tools:layout_editor_absoluteY="4dp" />

        <ImageView
            android:id="@+id/like"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_toRightOf="@id/logo"
            android:src="@drawable/like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.856"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription,RtlHardcoded"
            tools:layout_editor_absoluteY="4dp" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.895"
            app:layout_constraintStart_toStartOf="@+id/like"
            tools:ignore="ContentDescription"
            tools:layout_editor_absoluteY="4dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/secondtopics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toplogo"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toplogo"
        app:layout_constraintVertical_bias="0.014"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tvartist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/lato_light"
            android:text="@string/artist"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp" />
        <TextView
            android:id="@+id/tvalbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tvartist"
            android:fontFamily="@font/lato_light"
            android:text="@string/album"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/tvfolders"
            app:layout_constraintStart_toEndOf="@+id/tvartist"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tvfolders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:layout_toRightOf="@id/tvalbum"
            android:fontFamily="@font/lato_light"
            android:text="@string/folders"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/tvgenres"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tvgenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"
            android:layout_toRightOf="@id/tvfolders"
            android:fontFamily="@font/lato_light"
            android:text="@string/genres"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="RtlHardcoded" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomicon"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976">


        <ImageView
            android:id="@+id/imghome"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="ContentDescription,RtlHardcoded" />

        <ImageView
            android:id="@+id/imglibrary"
            android:layout_width="30dp"
            android:layout_height="33dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/library"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toStartOf="@+id/imghome"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/profile"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.956"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="ContentDescription" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
